Documentation edits made through Mintlify web editor

--- a/app-builder/builder/general-settings.mdx
+++ b/app-builder/builder/general-settings.mdx
@@ -1,6 +1,56 @@
 ---
-title: 'Cài đặt chung'
-description: 'Description of your new file.'
+title: "Cài đặt chung"
+description: "Description of your new file."
 icon: "square-sliders-vertical"
 ---
 
+### 3.1. Cài đặt chung
+
+Tại đây, người dùng có thể cài đặt các thông tin chung cho Mini App, bao gồm:
+
+<Frame>
+  <img
+    src="/general-settings.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Tên ứng dụng**: Đặt tên cho ứng dụng Mini App.
+- **Danh mục chính**: Lựa chọn chủ đề phù hợp, ví dụ: Thương mại điện tử, Giáo dục,…
+- **Mô tả ứng dụng**: Viết một đoạn mô tả ngắn gọn về Mini App của mình.
+- **Logo**: Tải lên logo cho Mini App.
+- **Ảnh chia sẻ ứng dụng**: Tải hình ảnh hiển thị khi chia sẻ Mini App với người khác.
+- **Màu sắc**: Tùy chỉnh màu chủ đạo và màu phụ cho ứng dụng.
+- **Font chữ**: Cài đặt lại font chữ trong Mini App.
+- **Thiết lập Zalo OA**: Cài đặt loại tài khoản (cá nhân hoặc doanh nghiệp) và nhập ID tài khoản OA.
+
+Tại đây, người dùng có thể cài đặt các thông tin chung cho Mini App:
+
+<CardGroup cols={2}>
+  <Card title="Tên ứng dụng" icon="app-window">
+    Đặt tên cho ứng dụng Mini App.
+  </Card>
+  <Card title="Danh mục chính" icon="list">
+    Lựa chọn chủ đề phù hợp, ví dụ: Thương mại điện tử, Giáo dục,…
+  </Card>
+  <Card title="Mô tả ứng dụng" icon="file-lines">
+    Viết một đoạn mô tả ngắn gọn về Mini App của mình.
+  </Card>
+  <Card title="Logo" icon="image">
+    Tải lên logo cho Mini App.
+  </Card>
+  <Card title="Ảnh chia sẻ ứng dụng" icon="share-nodes">
+    Tải hình ảnh hiển thị khi chia sẻ Mini App với người khác.
+  </Card>
+  <Card title="Màu sắc" icon="palette">
+    Tùy chỉnh màu chủ đạo và màu phụ cho ứng dụng.
+  </Card>
+  <Card title="Font chữ" icon="font">
+    Cài đặt lại font chữ trong Mini App.
+  </Card>
+  <Card title="Thiết lập Zalo OA" icon="mobile-screen-button">
+    Cài đặt loại tài khoản (cá nhân hoặc doanh nghiệp) và nhập ID tài khoản OA.
+  </Card>
+</CardGroup>
