--- a/app-builder/builder/design-app/navigation-bar.mdx
+++ b/app-builder/builder/design-app/navigation-bar.mdx
@@ -1,6 +1,125 @@
 ---
-title: 'Navigation Bar'
-description: 'Description of your new file.'
+title: "Navigation Bar"
+description: "Description of your new file."
 icon: "grid-round-2-plus"
 ---
 
+## **3.2. Navigation Bar**
+
+Chức năng **Navigation Bar** cho phép người dùng quản lý và tùy chỉnh thanh điều hướng của Mini App: thêm trang, sắp xếp, chỉnh sửa, xóa trang, chọn mẫu và điều chỉnh giao diện.
+
+---
+
+### a. Thêm trang mới trên thanh điều hướng
+
+<Steps>
+  <Step title="Nhấn Thêm trang mới">
+    ![][image17]
+  </Step>
+  <Step title="Nhập thông tin trang">
+    - **Tên trang**
+    - **Đường dẫn đến trang**
+    - **Icon mặc định & Icon kích hoạt**\
+      ![][image18]
+  </Step>
+  <Step title="Xác nhận thêm trang">
+    Nhấn **Thêm trang** để lưu hoặc **Hủy bỏ** để thoát.\
+    ![][image19]
+  </Step>
+</Steps>
+
+---
+
+### b. Kéo thả thay đổi vị trí
+
+<Steps>
+  <Step title="Nhấn giữ biểu tượng">
+    Nhấn giữ biểu tượng ![][image20] của trang cần di chuyển.
+  </Step>
+  <Step title="Kéo đến vị trí mong muốn">
+    Di chuyển trang đến vị trí mong muốn trong thanh điều hướng.\
+    ![][image21]
+  </Step>
+  <Step title="Hoàn tất sắp xếp">
+    Vị trí các trang sẽ được cập nhật ngay lập tức.
+  </Step>
+</Steps>
+
+---
+
+### c. Chỉnh sửa trang
+
+<Steps>
+  <Step title="Chọn biểu tượng chỉnh sửa">
+    Nhấn vào biểu tượng ![][image22] của trang muốn chỉnh sửa.\
+    ![][image23]
+  </Step>
+  <Step title="Nhập dữ liệu mới">
+    - **Tên trang**
+    - **Đường dẫn**
+    - **Icon mặc định & Icon kích hoạt**\
+      ![][image24]
+  </Step>
+  <Step title="Lưu hoặc hủy thao tác">
+    Nhấn **Lưu chỉnh sửa** để áp dụng thay đổi hoặc **Hủy bỏ** để thoát.\
+    ![][image25]
+  </Step>
+</Steps>
+
+---
+
+### d. Xóa trang
+
+<Steps>
+  <Step title="Chọn biểu tượng Xóa">
+    Nhấn biểu tượng ![][image26] của trang muốn xóa.\
+    ![][image27]
+  </Step>
+  <Step title="Xác nhận thao tác">
+    - Nhấn **Xóa ngay** để xóa vĩnh viễn
+    - Nhấn **Hủy** để thoát\
+      ![][image28]
+  </Step>
+</Steps>
+
+---
+
+### e. Chọn mẫu thanh điều hướng
+
+<Steps>
+  <Step title="Mở danh sách mẫu">
+    Tại mục **Các mẫu thanh điều hướng**, nhấn **Xem thêm**.\
+    ![][image29]
+  </Step>
+  <Step title="Chọn mẫu mong muốn">
+    Chọn mẫu trong danh sách và nhấn biểu tượng ![][image30] để áp dụng.\
+    ![][image31]
+  </Step>
+  <Step title="Hoàn tất">
+    Thanh điều hướng được thay đổi theo lựa chọn của người dùng.
+  </Step>
+</Steps>
+
+---
+
+### f. Điều chỉnh các chỉ số thanh điều hướng
+
+<Steps>
+  <Step title="Thiết lập khoảng cách (Margin & Padding)">
+    - **Lề ngoài (Margin):** chỉnh khoảng cách giữa thanh điều hướng và màn hình
+    - **Lề trong (Padding):** chỉnh khoảng cách giữa nội dung và thanh điều hướng\
+      ![][image32]
+  </Step>
+  <Step title="Tùy chỉnh phong cách">
+    - **Nền:** chọn hoặc xóa màu nền
+    - **Bo góc:** tùy chỉnh bo tròn góc
+    - **Viền:** chỉnh độ dày, màu sắc hoặc bật/tắt viền\
+      ![][image37] ![][image45]
+  </Step>
+  <Step title="Điều chỉnh tổng quan">
+    - Hiển thị/ẩn nhãn trang
+    - Chỉnh kích thước icon
+    - Đặt màu mặc định, màu kích hoạt, màu nền khi chọn\
+      ![][image48]
+  </Step>
+</Steps>
