Documentation edits made through Mintlify web editor

--- a/app-builder/builder/design-app/navigation-bar.mdx
+++ b/app-builder/builder/design-app/navigation-bar.mdx
@@ -44,28 +44,41 @@ trang, chọn mẫu và điều chỉnh giao diện.
 
 ### Thêm trang mới trên thanh điều hướng
 
-<Frame>
-  <img
-    src="/nav-add-more.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
-
 <Steps>
   <Step title="Nhấn Thêm trang mới">
-    ![][image17]
+    <Frame>
+      <img
+        src="/nav-add-more.png"
+        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        style={{ borderRadius:"0.5rem" }}
+        title=""
+      />
+    </Frame>
   </Step>
   <Step title="Nhập thông tin trang">
+    <Frame>
+      <img
+        src="/nav-info.png"
+        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        style={{ borderRadius:"0.5rem" }}
+        title=""
+      />
+    </Frame>
     - **Tên trang**
     - **Đường dẫn đến trang**
-    - **Icon mặc định & Icon kích hoạt**\
-      ![][image18]
+    - **Icon mặc định & Icon kích hoạt**
   </Step>
   <Step title="Xác nhận thêm trang">
-    Nhấn **Thêm trang** để lưu hoặc **Hủy bỏ** để thoát.\
-    ![][image19]
+    Nhấn **Thêm trang** để lưu hoặc **Hủy bỏ** để thoát.
+
+    <Frame>
+      <img
+        src="/nav-info-confirm.png"
+        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        style={{ borderRadius:"0.5rem" }}
+        title=""
+      />
+    </Frame>
   </Step>
 </Steps>
 
@@ -111,13 +124,13 @@ trang, chọn mẫu và điều chỉnh giao diện.
 
 <Steps>
   <Step title="Chọn biểu tượng chỉnh sửa">
-    Nhấn vào biểu tượng ![][image22] của trang muốn chỉnh sửa.\
+    Nhấn vào biểu tượng ![][image22] của trang muốn chỉnh sửa.
     ![][image23]
   </Step>
   <Step title="Nhập dữ liệu mới">
     - **Tên trang**
     - **Đường dẫn**
-    - **Icon mặc định & Icon kích hoạt**\
+    - **Icon mặc định & Icon kích hoạt**
       ![][image24]
   </Step>
   <Step title="Lưu hoặc hủy thao tác">
