Documentation edits made through Mintlify web editor

--- a/app-builder/builder/design-app/navigation-bar.mdx
+++ b/app-builder/builder/design-app/navigation-bar.mdx
@@ -48,7 +48,7 @@ trang, chọn mẫu và điều chỉnh giao diện.
   <Step title="Nhấn Thêm trang mới">
     <Frame>
       <img
-        src="/nav-add-more.png"
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/nav_add_more_88bee4b6cb.png"
         alt="Screenshot of a deployment confirmation message that says All checks have passed."
         style={{ borderRadius:"0.5rem" }}
         title=""
