Documentation edits made through Mintlify web editor

--- a/app-builder/builder/design-app/navigation-bar.mdx
+++ b/app-builder/builder/design-app/navigation-bar.mdx
@@ -11,7 +11,7 @@ trang, chọn mẫu và điều chỉnh giao diện.
 
 <Frame>
   <img
-    src="/Nav-Settings.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/Nav_Settings_5515dc6952.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -58,7 +58,7 @@ trang, chọn mẫu và điều chỉnh giao diện.
   <Step title="Nhập thông tin trang">
     <Frame>
       <img
-        src="/nav-info.png"
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/nav_info_08bf00dfbe.png"
         alt="Screenshot of a deployment confirmation message that says All checks have passed."
         style={{ borderRadius:"0.5rem" }}
         title=""
@@ -73,7 +73,7 @@ trang, chọn mẫu và điều chỉnh giao diện.
 
     <Frame>
       <img
-        src="/nav-info-confirm.png"
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/nav_info_confirm_bebbf32257.png"
         alt="Screenshot of a deployment confirmation message that says All checks have passed."
         style={{ borderRadius:"0.5rem" }}
         title=""
