Documentation edits made through Mintlify web editor

--- a/app-builder/builder/design-app/drag-drop-component.mdx
+++ b/app-builder/builder/design-app/drag-drop-component.mdx
@@ -1,6 +1,60 @@
 ---
-title: 'Drap & Drop Components'
-description: 'Description of your new file.'
+title: "Drap & Drop Components"
+description: "Description of your new file."
 icon: "diagram-predecessor"
 ---
 
+## **3.2 Drag & Drop Component**
+
+Người dùng nhấn giữ biểu tượng tương ứng với từng phần tử và kéo phần tử đến vị trí cần đặt để đạt được thứ tự mong muốn giữa các phần tử, sau đó thả chuột.
+
+Nút kéo thả thay đổi vị trí
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image115_2cd69e118f.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Sau khi thay đổi thứ tự các phần tử, vị trí các phần tử trong màn hình mô phỏng cũng sẽ thay đổi theo
+
+Vị trí các phần tử trước khi thay đổi
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image115_2cd69e118f.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+Vị trí các phần tử trước khi thay đổi
+
+- Bật/tắt hoặc xóa phần tử
+
+a. Bật/ tắt hiển thị phần tử trên trang
+
+Người dùng có thể nhấn vào nút để chuyển đổi qua lại giữa 2 trạng thái hiển thị và không hiển thị các phần tử
+
+Bật/tắt hiển thị phần tử
+
+b. Xóa phần tử trên trang
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image115_2cd69e118f.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- \*\*Bước 1: \*\*Người dùng nhấn vào nút
+
+Nút xóa phần tử
+
+- **Bước 2**: Người dùng nhấn nút "Xóa ngay" để xóa phần tử hoặc nhấn "Hủy" để hủy thao tác xóa
+- Nút xóa ngay và nút hủy
