--- a/app-builder/builder/design-app/drag-drop-component.mdx
+++ b/app-builder/builder/design-app/drag-drop-component.mdx
@@ -25,7 +25,7 @@ Vị trí các phần tử trước khi thay đổi
 
 <Frame>
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image115_2cd69e118f.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image32_cd5593e5f2.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
