Documentation edits made through Mintlify web editor

--- a/app-builder/builder/design-app/drag-drop-component.mdx
+++ b/app-builder/builder/design-app/drag-drop-component.mdx
@@ -45,14 +45,23 @@ Bật/tắt hiển thị phần tử
 b. Xóa phần tử trên trang
 <Frame>
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image115_2cd69e118f.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image133_08984e759a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-- \*\*Bước 1: \*\*Người dùng nhấn vào nút
+- \*\*Bước 1: \*\*Người dùng nhấn vào nút <Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image12_3a585871f9.jpg"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+
 
 Nút xóa phần tử
 
