Documentation edits made through Mintlify web editor

--- a/app-builder/builder/design-app/drag-drop-component.mdx
+++ b/app-builder/builder/design-app/drag-drop-component.mdx
@@ -52,7 +52,8 @@ b. Xóa phần tử trên trang
   />
 </Frame>
 
-- \*\*Bước 1: \*\*Người dùng nhấn vào nút <Frame>
+- \*\*Bước 1: \*\*Người dùng nhấn vào nút
+<Frame>
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image12_3a585871f9.jpg"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
