Documentation edits made through Mintlify web editor

--- a/app-builder/builder/design-app/drag-drop-component.mdx
+++ b/app-builder/builder/design-app/drag-drop-component.mdx
@@ -8,9 +8,7 @@ icon: "diagram-predecessor"
 
 Người dùng nhấn giữ biểu tượng tương ứng với từng phần tử và kéo phần tử đến vị trí cần đặt để đạt được thứ tự mong muốn giữa các phần tử, sau đó thả chuột.
 
-Nút kéo thả thay đổi vị trí
-
-<Frame>
+<Frame caption="Nút kéo thả thay đổi vị trí">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image115_2cd69e118f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
@@ -21,51 +19,41 @@ Nút kéo thả thay đổi vị trí
 
 - Sau khi thay đổi thứ tự các phần tử, vị trí các phần tử trong màn hình mô phỏng cũng sẽ thay đổi theo
 
-Vị trí các phần tử trước khi thay đổi
-
-<Frame>
+<Frame caption="Vị trí các phần tử trước khi thay đổi">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image32_cd5593e5f2.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image226_1a9c067885.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
-
-Vị trí các phần tử trước khi thay đổi
 
 - Bật/tắt hoặc xóa phần tử
 
 a. Bật/ tắt hiển thị phần tử trên trang
 
-Người dùng có thể nhấn vào nút để chuyển đổi qua lại giữa 2 trạng thái hiển thị và không hiển thị các phần tử
+Người dùng có thể nhấn vào nút **biểu tượng được khoanh đỏ bên dưới** để chuyển đổi qua lại giữa 2 trạng thái hiển thị và không hiển thị các phần tử.
 
-Bật/tắt hiển thị phần tử
-
-b. Xóa phần tử trên trang
-<Frame>
+<Frame caption="Bật/tắt hiển thị phần tử">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image133_08984e759a.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    alt="Icon được khoanh tròn"
     style={{ borderRadius:"0.5rem" }}
-    title=""
   />
 </Frame>
 
-- **Bước 1**: Người dùng nhấn vào nút
-- <Frame>
+b. Xóa phần tử trên trang
+
+- **Bước 1**: Người dùng nhấn vào nút **biểu tượng được khoanh đỏ bên dưới**
+
+<Frame caption="Nút xóa phần tử">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image12_3a585871f9.jpg"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image140_2830b31ad0.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
-
-
-
-
-Nút xóa phần tử
 
 - **Bước 2**: Người dùng nhấn nút "Xóa ngay" để xóa phần tử hoặc nhấn "Hủy" để hủy thao tác xóa
 - Nút xóa ngay và nút hủy
