--- a/app-builder/builder/design-app/components.mdx
+++ b/app-builder/builder/design-app/components.mdx
@@ -1,6 +1,5 @@
 ---
-title: 'Components'
-description: 'Description of your new file.'
+title: "Components"
+description: "Description of your new file."
 icon: "grid-2"
 ---
-
