--- a/app-builder/builder/pages/payment-page.mdx
+++ b/app-builder/builder/pages/payment-page.mdx
@@ -3,4 +3,72 @@ title: 'Payment setting'
 description: 'Description of your new file.'
 icon: "circle-user"
 ---
+### **3.3.9. Payment setting** 
+
+**Tiêu đề**
+
+		**Nền**
+
+* Chọn màu nền cho tiêu đề bằng cách nhấn ô vuông ![][image120]sau đó chọn màu  
+  * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image121]  
+    * Xóa màu nền bằng cách nhấn nút ![][image122]  
+  * **Hiển thị tiêu đề:**  
+    * Người dùng nhấn nút ![][image123]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho trang thanh toán. Ví dụ, nếu tiêu đề là "Thanh toán" thì sẽ hiển thị như sau:
+
+<Frame caption="Tiêu đề thanh toán  ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image48_3d19e2e8b6.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+ 
+  * **Kích thước/ Màu sắc**:  
+    * Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần thanh toán tại ![][image125]
+
+	**Tổng quan**
+
+		**Hiển thị tên cửa hàng**:
+
+* Người dùng nhấn nút ![][image176]để chuyển đổi qua lại giữa 2 trạng thái có tên cửa hàng và không có tên cửa hàng
+
+  **Hiển thị mã giảm giá**:
+
+  * Người dùng nhấn nút ![][image176]để chuyển đổi qua lại giữa 2 trạng thái có mã giảm giá và không có mã giảm giá
+
+		**Hiển thị tích điểm**:
+
+* Người dùng nhấn nút ![][image176]để chuyển đổi qua lại giữa 2 trạng thái có tích điểm và không có tích điểm
+
+		**Hiển thị chiết khấu thành viên**:
+
+* Người dùng nhấn nút ![][image176]để chuyển đổi qua lại giữa 2 trạng thái có chiết khấu thành viên và không có chiết khấu thành viên
+
+  **Hiển thị ghi chú**:
+
+  * Người dùng nhấn nút ![][image176]để chuyển đổi qua lại giữa 2 trạng thái có ghi chú và không có ghi chú
+
+		**Hiển thị Top Up**:
+
+* Người dùng nhấn nút ![][image176]để chuyển đổi qua lại giữa 2 trạng thái có Top Up và không có Top Up
+
+**Phương thức thanh toán**
+
+		**Thanh toán khi nhận hàng (COD)**:
+
+* Người dùng nhấn nút ![][image176]để chuyển đổi qua lại giữa 2 trạng thái có thanh toán khi nhận hàng và không có thanh toán khi nhan hàng
+
+  **Chuyển khoản ngân hàng**:
+
+  * Người dùng nhấn nút ![][image176]để chuyển đổi qua lại giữa 2 trạng thái có chuyển khoản ngân hàng và không có chuyển khoản ngân hàng
+
+  **VNPay**:
+
+    * Người dùng nhấn nút ![][image176]để chuyển đổi qua lại giữa 2 trạng thái có thanh toán VNPay và không có thanh toán VNPay
+
+  **Momo**:
+
+    * Người dùng nhấn nút ![][image176]để chuyển đổi qua lại giữa 2 trạng thái có thanh toán Momo và không có thanh toán Momo
 
