Documentation edits made through Mintlify web editor

--- a/app-builder/builder/img-library.mdx
+++ b/app-builder/builder/img-library.mdx
@@ -1,6 +1,77 @@
 ---
-title: 'Thư viện hình ảnh'
-description: 'Description of your new file.'
+title: "Thư viện hình ảnh"
+description: "Description of your new file."
 icon: "photo-film"
 ---
+## **4.1. Thư viện hình ảnh** 
 
+Thư viện hình ảnh là nơi lưu trữ và quản lý tất cả các hình ảnh được sử dụng trong ứng dụng.  
+<Frame caption="Thư viện hình ảnh  ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image167_efaa8051c7.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+
+  **Tải ảnh mới:**
+
+  * **Bước 1**: Người dùng nhấn vào nút "Tải ảnh mới"
+
+<Frame caption="Nút thêm mới  ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image210_8700753a74.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+
+  * **Bước 2:**  
+    * Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện"   
+  * **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm mới hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
+
+  **Xem:**
+
+  	Người dùng nhấn ![][image187] để xem chi tiết hình ảnh
+
+<Frame caption="Nút xem hình ảnh ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image108_c62d1fa692.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+
+
+	**Xóa:**  
+		Người dùng nhấn ![][image189] để xóa bỏ hình ảnh  
+        
+<Frame caption="Nút xóa hình ảnh  ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image170_30120f526a.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+
+
+  **Hình ảnh của tôi**: hiển thị tất cả hình ảnh mà người dùng đã tải lên.
+
+  **Thư viện hình ảnh**: cung cấp hình ảnh mẫu từ hệ thống.
+
+<Frame caption="Thư viện ảnh ">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image44_8a6961305a.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
