Documentation edits made through Mintlify web editor

--- a/app-builder/builder/components/headers.mdx
+++ b/app-builder/builder/components/headers.mdx
@@ -3,7 +3,7 @@ title: 'Headers'
 description: 'Description of your new file.'
 icon: "circle-user"
 ---
-### **4.2.1. Headers** {#4.2.1.-headers}
+### **4.2.1. Headers** 
 
 * **\- Hiển thị logo:** Người dùng nhấn nút ![][image102]để chuyển đổi qua lại giữa 2 trạng thái có logo và không có logo  
 * **\- Hiển thị tiêu đề:** Người dùng nhấn nút ![][image192]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, người dùng đồng thời có thể chỉnh sửa tiêu đề cho tiêu đề tại thanh nhập  
