--- a/app-builder/builder/components/banners.mdx
+++ b/app-builder/builder/components/banners.mdx
@@ -4,11 +4,11 @@ description: "Description of your new file."
 icon: "circle-user"
 ---
 
-### **4.2.2. Banners** 
+### **4.2.2. Banners**
 
-* **Dữ liệu**  
-* **\- Thêm dữ liệu mới:**  
-* **Bước 1:** Người dùng nhấn vào nút "Thêm dữ liệu mới"
+- **Dữ liệu**
+- **Thêm dữ liệu mới:**
+- **Bước 1:** Người dùng nhấn vào nút "Thêm dữ liệu mới"
 
 <Frame caption="Nút thêm dữ liệu mới ">
   <img
@@ -19,8 +19,7 @@ icon: "circle-user"
   />
 </Frame>
 
-
-* **Bước 2:** Người dùng nhấn **"**Tải ảnh lên hoặc chọn ảnh từ thư viện" và chọn đường dẫn đến trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này trên banner)
+- **Bước 2:** Người dùng nhấn \*\*"\*\*Tải ảnh lên hoặc chọn ảnh từ thư viện" và chọn đường dẫn đến trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này trên banner)
 
 <Frame caption="Thêm dữ liệu  ">
   <img
@@ -31,9 +30,9 @@ icon: "circle-user"
   />
 </Frame>
 
-  * **Bước 3:** Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh cho banner hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu  
-* **Chỉnh sửa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image202]để đến trang chỉnh sửa
+- **Bước 3:** Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh cho banner hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
+- **Chỉnh sửa:**
+  - **Bước 1:** Người dùng nhấn vào nút ![][image202]để đến trang chỉnh sửa
 
 <Frame caption="Nút chỉnh sửa  ">
   <img
@@ -44,8 +43,7 @@ icon: "circle-user"
   />
 </Frame>
 
-
-  * **Bước 2**: Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện” và sửa đường dẫn đến trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này trên banner)
+- **Bước 2**: Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện” và sửa đường dẫn đến trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này trên banner)
 
 <Frame caption="Chỉnh sửa dữ liệu   ">
   <img
@@ -56,10 +54,9 @@ icon: "circle-user"
   />
 </Frame>
 
-
-  * **Bước 3:** Người dùng nhấn **"**Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh cho banner hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu  
-* **Xóa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image205]để xóa dữ liệu
+- **Bước 3:** Người dùng nhấn \*\*"\*\*Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh cho banner hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
+- **Xóa:**
+  - **Bước 1:** Người dùng nhấn vào nút ![][image205]để xóa dữ liệu
 
 <Frame caption="Nút xóa dữ liệu ">
   <img
@@ -70,8 +67,7 @@ icon: "circle-user"
   />
 </Frame>
 
- 
-  * **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn **Xóa ngay** để tiến hành xóa ảnh khỏi banner hoặc nhấn **Hủy** để hủy quá trình xóa dữ liệu
+- **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn **Xóa ngay** để tiến hành xóa ảnh khỏi banner hoặc nhấn **Hủy** để hủy quá trình xóa dữ liệu
 
 <Frame caption=" ">
   <img
@@ -81,7 +77,6 @@ icon: "circle-user"
     title=""
   />
 </Frame>
-
 
 **Hiệu ứng**
 
@@ -96,30 +91,28 @@ Người dùng có thể chọn các hiệu ứng chuyển trang giữa các ả
   />
 </Frame>
 
-
 **Hình ảnh**
 
-	**Chiều cao**
+**Chiều cao**
 
-Người dùng có thể nhập hoặc tăng/giảm chiều cao của phần tử banner 
+Người dùng có thể nhập hoặc tăng/giảm chiều cao của phần tử banner
 
-* **Lề ngoài**  
-  * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa phần tử banner với các phần tử khác bằng nút ![][image209]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image210]  
-  * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa phần tử banner với lề màn hình điện thoại bằng nút ![][image211]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image212]  
-* **Lề trong**  
-  * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa phần tử banner với hình ảnh bên trong phần tử banner bằng nút ![][image213]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image214]  
-  * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa phần tử banner với hình ảnh bên trong phần tử banner bằng nút ![][image215]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image216]  
-* **Bo góc**
+- **Lề ngoài**
+  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa phần tử banner với các phần tử khác bằng nút ![][image209]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image210]
+  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa phần tử banner với lề màn hình điện thoại bằng nút ![][image211]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image212]
+- **Lề trong**
+  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa phần tử banner với hình ảnh bên trong phần tử banner bằng nút ![][image213]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image214]
+  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa phần tử banner với hình ảnh bên trong phần tử banner bằng nút ![][image215]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image216]
+- **Bo góc**
 
   Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của phần tử banner tại ô nhập ![][image217]hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image218]
-
-* **Viền**  
-  * Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của phần tử banner tại ô nhập ![][image219]  
-  * Chọn màu cho viền bằng cách nhấn ô vuông ![][image220]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image221]  
-  * Xóa viền bằng cách nhấn nút ![][image222]  
-* **Đổ bóng**  
-  * Người dùng có thể chọn độ lớn đổ bóng của phần tử banner tại ô ![][image223]  
-  * Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image224]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image225]  
-  * Xóa đổ bóng bằng cách nhấn nút ![][image226]
+- **Viền**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của phần tử banner tại ô nhập ![][image219]
+  - Chọn màu cho viền bằng cách nhấn ô vuông ![][image220]sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image221]
+  - Xóa viền bằng cách nhấn nút ![][image222]
+- **Đổ bóng**
+  - Người dùng có thể chọn độ lớn đổ bóng của phần tử banner tại ô ![][image223]
+  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image224]sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image225]
+  - Xóa đổ bóng bằng cách nhấn nút ![][image226]
